Comentando notebook dos BD e limpando as tabelas

--- a/A2/bancos.ipynb
+++ b/A2/bancos.ipynb
@@ -23,6 +23,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Escolhemos usar o sqlite pois tivemos problemas com o MongoBD por ser uma base muito grande e o sqlite funcionou muito bem. O sqlite não suporta dados geométricos, então transformamos as colunas de geometria em campos do tipo string e mudamos seu tipo apenas na hora de usar os dados para análise."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Dados sobre o PIB de cada município"
    ]
   },
@@ -35,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -48,8 +55,25 @@
    ],
    "source": [
     "gpd_pib = gpd.read_file(\"pib.json\")\n",
-    "gpd_pib = gpd_pib.drop(columns = 'Descrição') #descrição estava escrito \"produto interno bruto\" em todas as linhas\n",
-    "print(type(gpd_pib))"
+    "print(type(gpd_pib))\n",
+    "gpd_pib.head(2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A base inteira tinha muitas colunas que não vamos usar para nada, então iremos pegar apenas as que nos interessam "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gpd_pib = gpd_pib[['gid','UF','nome','PIB','Pop_est_2009','PIB_percapita','geometry']]\n",
+    "gpd_pib.head(2)"
    ]
   },
   {
@@ -61,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,24 +126,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "conn = sqlite3.connect(os.path.join('pib.db'))\n",
+    "conn = sqlite3.connect(os.path.join('BancosA2.db'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "cur = conn.cursor()\n",
     "cur.execute('''CREATE TABLE IF NOT EXISTS pib\n",
-    "             ('id' INT NOT NULL,\n",
-    "             'index' INT PRIMARY KEY NOT NULL,\n",
-    "             'gid' INT,\n",
+    "             ('gid' INT PRIMARY KEY NOT NULL,\n",
     "             'UF' text,\n",
     "             'nome' text,\n",
-    "             'Censo' text,\n",
     "             'PIB' FLOAT,\n",
     "             'Pop_est_2009' FLOAT,\n",
     "             'PIB_percapita' FLOAT,\n",
-    "             'legenda' text,\n",
-    "             'classe' INT,\n",
     "             'geometry' text)''')\n",
     "conn.commit()"
    ]
@@ -133,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -166,11 +193,184 @@
      "text": [
       "<class 'geopandas.geodataframe.GeoDataFrame'>\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>gid</th>\n",
+       "      <th>UF</th>\n",
+       "      <th>nome</th>\n",
+       "      <th>Censo</th>\n",
+       "      <th>POP_TOT</th>\n",
+       "      <th>Pessoas_Pretas</th>\n",
+       "      <th>PER_Pessoas_Pretas</th>\n",
+       "      <th>descricao</th>\n",
+       "      <th>legenda</th>\n",
+       "      <th>classe</th>\n",
+       "      <th>geometry</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>vw_per_pessoas_pretas.fid-60efe8e1_17d582643c1...</td>\n",
+       "      <td>215</td>\n",
+       "      <td>BAHIA</td>\n",
+       "      <td>Tremedal</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>17029.0</td>\n",
+       "      <td>827</td>\n",
+       "      <td>4.856421</td>\n",
+       "      <td>Percentual de pessoas residentes de cor ou raç...</td>\n",
+       "      <td>4,22% - 7,79%</td>\n",
+       "      <td>2</td>\n",
+       "      <td>MULTIPOLYGON (((-41.45880 -14.78142, -41.45497...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>vw_per_pessoas_pretas.fid-60efe8e1_17d582643c1...</td>\n",
+       "      <td>306</td>\n",
+       "      <td>RIO GRANDE DO SUL</td>\n",
+       "      <td>Turuçu</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>3522.0</td>\n",
+       "      <td>133</td>\n",
+       "      <td>3.776264</td>\n",
+       "      <td>Percentual de pessoas residentes de cor ou raç...</td>\n",
+       "      <td>- 4,22%</td>\n",
+       "      <td>1</td>\n",
+       "      <td>MULTIPOLYGON (((-52.03535 -31.56751, -52.04061...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                  id  gid                 UF  \\\n",
+       "0  vw_per_pessoas_pretas.fid-60efe8e1_17d582643c1...  215              BAHIA   \n",
+       "1  vw_per_pessoas_pretas.fid-60efe8e1_17d582643c1...  306  RIO GRANDE DO SUL   \n",
+       "\n",
+       "       nome Censo  POP_TOT  Pessoas_Pretas  PER_Pessoas_Pretas  \\\n",
+       "0  Tremedal  2010  17029.0             827            4.856421   \n",
+       "1    Turuçu  2010   3522.0             133            3.776264   \n",
+       "\n",
+       "                                           descricao        legenda  classe  \\\n",
+       "0  Percentual de pessoas residentes de cor ou raç...  4,22% - 7,79%       2   \n",
+       "1  Percentual de pessoas residentes de cor ou raç...        - 4,22%       1   \n",
+       "\n",
+       "                                            geometry  \n",
+       "0  MULTIPOLYGON (((-41.45880 -14.78142, -41.45497...  \n",
+       "1  MULTIPOLYGON (((-52.03535 -31.56751, -52.04061...  "
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "gpd_racial = gpd.read_file('raciais.json')\n",
-    "print(type(gpd_racial))"
+    "print(type(gpd_racial))\n",
+    "gpd_racial.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>gid</th>\n",
+       "      <th>UF</th>\n",
+       "      <th>nome</th>\n",
+       "      <th>POP_TOT</th>\n",
+       "      <th>Pessoas_Pretas</th>\n",
+       "      <th>PER_Pessoas_Pretas</th>\n",
+       "      <th>geometry</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>215</td>\n",
+       "      <td>BAHIA</td>\n",
+       "      <td>Tremedal</td>\n",
+       "      <td>17029.0</td>\n",
+       "      <td>827</td>\n",
+       "      <td>4.856421</td>\n",
+       "      <td>MULTIPOLYGON (((-41.45880 -14.78142, -41.45497...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>306</td>\n",
+       "      <td>RIO GRANDE DO SUL</td>\n",
+       "      <td>Turuçu</td>\n",
+       "      <td>3522.0</td>\n",
+       "      <td>133</td>\n",
+       "      <td>3.776264</td>\n",
+       "      <td>MULTIPOLYGON (((-52.03535 -31.56751, -52.04061...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   gid                 UF      nome  POP_TOT  Pessoas_Pretas  \\\n",
+       "0  215              BAHIA  Tremedal  17029.0             827   \n",
+       "1  306  RIO GRANDE DO SUL    Turuçu   3522.0             133   \n",
+       "\n",
+       "   PER_Pessoas_Pretas                                           geometry  \n",
+       "0            4.856421  MULTIPOLYGON (((-41.45880 -14.78142, -41.45497...  \n",
+       "1            3.776264  MULTIPOLYGON (((-52.03535 -31.56751, -52.04061...  "
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gpd_racial = gpd_racial[['gid','UF','nome','POP_TOT','Pessoas_Pretas','PER_Pessoas_Pretas','geometry']]\n",
+    "gpd_racial.head(2)"
    ]
   },
   {
@@ -182,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,25 +423,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "conn = sqlite3.connect(os.path.join('racial.db'))\n",
     "cur = conn.cursor()\n",
     "cur.execute('''CREATE TABLE IF NOT EXISTS racial\n",
-    "             ('id' INT NOT NULL,\n",
-    "             'index' INT PRIMARY KEY NOT NULL,\n",
-    "             'gid' INT,\n",
+    "             ('gid'  INT PRIMARY KEY NOT NULL,\n",
     "             'UF' text,\n",
     "             'nome' text,\n",
-    "             'Censo' text,\n",
     "             'POP_TOT' FLOAT,\n",
     "             'Pessoas_Pretas' FLOAT,\n",
     "             'PER_Pessoas_Pretas' FLOAT,\n",
-    "             'Descrição' text,\n",
-    "             'legenda' text,\n",
-    "             'classe' INT,\n",
     "             'geometry' text)''')\n",
     "conn.commit()"
    ]
@@ -255,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,43 +460,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Dados sobre as eleições presidenciais 2010 de cada município\n"
+    "Fechando a conexão apenas após todas as operações com o banco de dados."
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "### Criando um DataFrame em GeoPandas que contém os dados"
+    "conn.close()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
